[tool.poetry]
name = "fox"
version = "0.1.0"
description = "Simple API to run commands on remote servers."
authors = ["Daniel Kertesz <daniel@spatof.org>"]
license = "BSD-2-Clause"

[tool.poetry.dependencies]
python = "^3.6"
asyncssh = { version = "^1.15", extras = ["libnacl"] }
tqdm = "^4.31"
dataclasses = { version = "^0.6", python = "~3.6" }

[tool.poetry.dev-dependencies]
pytest = "^4.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
