[tool.poetry]
name = "fox"
version = "0.1.0"
description = "Simple API to run commands on remote servers."
authors = ["Daniel Kertesz <daniel@spatof.org>"]
license = "BSD-2-Clause"
readme = "README.md"
keywords = ["automation", "ssh", "fabric"]
repository = "https://github.com/piger/fox"

[tool.poetry.dependencies]
python = "^3.6"
asyncssh = { version = "^1.15", extras = ["libnacl"] }
tqdm = "^4.31"
dataclasses = { version = "^0.6", python = "~3.6" }

[tool.poetry.dev-dependencies]
pytest = "^4.3"
sphinx = {version = "^1.8",optional = true}
sphinx_rtd_theme = {version = "^0.4.3",optional = true}

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
